# frozen-vault

./: .copier-answers.yml  .env-prod.example  .gitignore  AGENTS.md  README.md  docker-compose-prod.yml  docker-compose.yml  nginx.conf  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: backup.yml  docker-publish.yml  docs.yml  test.yml
apps/api/: Dockerfile  README.md  mkdocs.yml  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 37a5a7b73d4a_add_preparations_product_type.py  ea84b5ce47e9_initial_schema.py
apps/api/docs/: index.md
apps/api/src/fridge_app_backend/: config.py
apps/api/src/fridge_app_backend/api/: app.py  deployment_info.py
apps/api/src/fridge_app_backend/api/routes/: utils_routes.py
apps/api/src/fridge_app_backend/orm/models/: db_models.py
apps/api/src/fridge_app_backend/web/: templating.py
apps/api/src/fridge_app_backend/web/routes/: inventory_web_routes.py
apps/api/src/frozen_vault_backend/: __init__.py  config.py  exceptions.py
apps/api/src/frozen_vault_backend/api/: __init__.py  app.py  deployment_info.py  utils.py
apps/api/src/frozen_vault_backend/api/dependencies/: __init__.py  product_dependencies.py
apps/api/src/frozen_vault_backend/api/routes/: __init__.py  inventory_routes.py  utils_routes.py
apps/api/src/frozen_vault_backend/orm/: __init__.py  constants.py  database.py
apps/api/src/frozen_vault_backend/orm/crud/: __init__.py  base_crud.py  product_crud.py  product_location_crud.py  product_type_crud.py
apps/api/src/frozen_vault_backend/orm/enums/: __init__.py  base_enums.py
apps/api/src/frozen_vault_backend/orm/models/: __init__.py  db_models.py
apps/api/src/frozen_vault_backend/orm/schemas/: product_location_schemas.py  product_schemas.py  product_type_schemas.py
apps/api/src/frozen_vault_backend/web/: __init__.py  templating.py
apps/api/src/frozen_vault_backend/web/routes/: __init__.py  inventory_web_routes.py
apps/api/tests/: __init__.py  conftest.py  test_import.py  test_inventory_e2e.py  test_inventory_integration.py
apps/api/tests/api/: test_inventory_routes.py  test_utils_routes.py
apps/api/tests/config/: test_config.py
apps/api/tests/orm/: test_base_crud.py
apps/api/tests/utils/: test_api_utils.py
apps/api/tests/web/: test_inventory_web_routes.py
apps/frontend/: package-lock.json  package.json
apps/frontend/static/css/: app.css
apps/frontend/static/js/: app.js
apps/frontend/templates/: base.html
apps/frontend/templates/analytics/: index.html
apps/frontend/templates/home/: index.html
apps/frontend/templates/inventory/: _empty_state.html  _flash.html  _product_card.html  _product_form.html  _product_list.html  _toolbar.html  form_page.html  index.html
apps/frontend/templates/more/: deployment.html  index.html
apps/frontend/templates/partials/: _bottom_nav.html  _brand_mark.html  _inventory_visual.html
scripts/: pi-check.sh  pi-deploy.sh
